--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "private": true,
+  "private": false,
   "name": "husky-4-to-8",
   "version": "1.0.0",
   "bin": "lib/bin.js",
@@ -25,7 +25,7 @@
     "prepare": "husky install",
     "lint": "eslint src"
   },
-  "repository": "typicode/husky-4-to-8.git",
+  "repository": "https://github.com/Airsola/husky-4-to-8",
   "author": "Typicode <typicode@gmail.com>",
   "license": "MIT"
 }
